Fix Airbeam and Aircasting logo sizes & alignment

--- a/_sass/modules/_logo.scss
+++ b/_sass/modules/_logo.scss
@@ -3,11 +3,21 @@
 }
 
 .logo--body {
-  height: 2.6rem;
+  height: 40px;
   width: auto;
   margin-bottom: $u-space-small;
+}
+
+.logo--airbeam {
+  @media screen and (min-width: $tablet-min) {
+    height: auto;
+  }
+}
+
+.logo--aircasting {
+  margin-bottom: 17px;
 
   @media screen and (min-width: $tablet-min) {
-    height: 3.5rem;
+    height: auto;
   }
 }
